--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,5 @@
-/* Reset styles */
+/* ======================= Reset styles ========================== */
+
 h1,
 h2,
 h3,
@@ -13,15 +14,15 @@ p:last-child {
   margin-bottom: 0;
 }
 
+ol,
 ul {
   margin: 0;
   padding: 0;
-  list-style: none;
+  
 }
 
 a {
-  color: currentColor;
-  text-decoration: none;
+  color: currentColor;  
 }
 
 button {
@@ -33,3 +34,5 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+/* ======================= Reset styles ========================== */
