--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,28 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+<!-- HEADER -->
+<header class="header-section">
+  <div class="header-wrapper container">
+    <nav class="page-nav">
+      <a class="logo-link link" href="">
+        <svg class="social-icon" width="32" height="32">
+          <use href="../img/sprite.svg#icon-logo"></use>
+        </svg>
+        CUCINA
+      </a>
+      <ul class="menu list">
+        <li class="menu-item">
+          <a class="menu-link link" href="">Home</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="">Store</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="">Recipes</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="">Gallery</a>
+        </li>
+      </ul>
+    </nav>
+    <button class="header-btn btn" type="button">Contact us</button>
+  </div>
 </header>
