update img path

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-wrapper">
       <a class="logo-link link" href="">
         <svg class="social-icon" width="32" height="32">
-          <use href="../img/sprite.svg#icon-logo"></use>
+          <use href="./img/sprite.svg#icon-logo"></use>
         </svg>
         CUCINA
       </a>
@@ -28,7 +28,7 @@
           <li class="address-item">
             <a class="link" href="https://goo.gl/maps/pRxkrZQEtzReCntT8"
               ><svg class="adress-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-location"></use>
+                <use href="./img/sprite.svg#icon-location"></use>
               </svg>
               Elvia Elviaveien 1, 1234 Oslo</a
             >
@@ -36,7 +36,7 @@
           <li class="address-item">
             <a class="link" href="mailto:willie.jennings@example.com"
               ><svg class="adress-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-email"></use>
+                <use href="./img/sprite.svg#icon-email"></use>
               </svg>
               willie.jennings@example.com</a
             >
@@ -47,28 +47,28 @@
         <li class="social-item">
           <a class="social-link link" href="">
             <svg class="social-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-tumblr"></use>
+              <use href="./img/sprite.svg#icon-tumblr"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link link" href="">
             <svg class="social-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-instagram"></use>
+              <use href="./img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link link" href="">
             <svg class="social-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-youtube"></use>
+              <use href="./img/sprite.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link link" href="">
             <svg class="social-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-twitter"></use>
+              <use href="./img/sprite.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
