--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <nav class="page-nav">
       <a class="logo-link link" href="">
         <svg class="social-icon" width="32" height="32">
-          <use href="../img/sprite.svg#icon-logo"></use>
+          <use href="./img/sprite.svg#icon-logo"></use>
         </svg>
         CUCINA
       </a>
