--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,7 +4,7 @@
   <div class="container">
     <ul class="first-container list">
       <li class="first-list-one">
-        <img src="../img/imgsect1.1.png" alt="red tomatoes on a branch" />
+        <img src="./img/imgsect1.1.png" alt="red tomatoes on a branch" />
         <div class="description">
           <h2 class="heading-description">Classic sauce</h2>
           <p class="paragraph-description">
@@ -15,7 +15,7 @@
         </div>
       </li>
       <li class="first-list-two">
-        <img src="../img/imgsect1.2.png" alt="red hot peppers" />
+        <img src="./img/imgsect1.2.png" alt="red hot peppers" />
         <div class="description">
           <h2 class="heading-description">Spicy sauce</h2>
           <p class="paragraph-description">
@@ -33,11 +33,11 @@
   <div class="container">
     <ul class="second-container list">
       <li class="">
-        <img src="../img/imgsect2.1.png" alt="cook together" />
+        <img src="./img/imgsect2.1.png" alt="cook together" />
         <h2 class="heading-section-two">Bell pepper pasta</h2>
       </li>
       <li class="">
-        <img src="../img/imgsect2.2.png" alt="Cooking" />
+        <img src="./img/imgsect2.2.png" alt="Cooking" />
         <h2 class="heading-section-two">Tomato paste</h2>
       </li>
     </ul>
@@ -46,6 +46,6 @@
 
 <section class="section">
   <div class="third-section container">
-    <img src="../img/imgsect3.png" alt="tomatoes in the garden" />
+    <img src="./img/imgsect3.png" alt="tomatoes in the garden" />
   </div>
 </section>
