--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,33 +17,33 @@
       </ul>
     </div>
 
-    <img class="hero-img" src="../img/hero.png" alt="Cucina" />
+    <img class="hero-img" src="./img/hero.png" alt="Cucina" />
     <ul class="social-list list">
       <li class="social-item">
         <a class="social-link link" href="">
           <svg class="social-icon" width="24" height="24">
-            <use href="../img/sprite.svg#icon-tumblr"></use>
+            <use href="./img/sprite.svg#icon-tumblr"></use>
           </svg>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link link" href="">
           <svg class="social-icon" width="24" height="24">
-            <use href="../img/sprite.svg#icon-instagram"></use>
+            <use href="./img/sprite.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link link" href="">
           <svg class="social-icon" width="24" height="24">
-            <use href="../img/sprite.svg#icon-youtube"></use>
+            <use href="./img/sprite.svg#icon-youtube"></use>
           </svg>
         </a>
       </li>
       <li class="social-item">
         <a class="social-link link" href="">
           <svg class="social-icon" width="24" height="24">
-            <use href="../img/sprite.svg#icon-twitter"></use>
+            <use href="./img/sprite.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
