--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,80 +1,91 @@
 <!-- FOOTER -->
-
 <footer>
   <div class="footer-container container">
     <div class="footer-wrapper">
-      <a class="logo-link link" href="">
-        <svg class="social-icon" width="32" height="32">
-          <use href="./img/sprite.svg#icon-logo"></use>
-        </svg>
-        CUCINA
-      </a>
-      <ul class="foot-menu list">
-        <li class="foot-item">
-          <a class="menu-link link" href="">Home</a>
-        </li>
-        <li class="foot-item">
-          <a class="menu-link link" href="">Store</a>
-        </li>
-        <li class="foot-item">
-          <a class="menu-link link" href="">Recipes</a>
-        </li>
-        <li class="foot-item">
-          <a class="menu-link link" href="">Gallery</a>
-        </li>
-      </ul>
-      <address>
-        <ul class="adress-list list">
-          <li class="address-item">
-            <a class="link" href="https://goo.gl/maps/pRxkrZQEtzReCntT8"
-              ><svg class="adress-icon" width="24" height="24">
-                <use href="./img/sprite.svg#icon-location"></use>
-              </svg>
-              Elvia Elviaveien 1, 1234 Oslo</a
-            >
+      <div class="logo-box">
+        <a class="foot-logo-link link" href="">
+          <svg class="social-icon" width="32" height="32">
+            <use href="./img/sprite.svg#icon-logo"></use>
+          </svg>
+          CUCINA
+        </a>
+      </div>
+      <div class="foot-menu-box">
+        <ul class="foot-menu list">
+          <li class="foot-item">
+            <a class="menu-link link" href="">Home</a>
           </li>
-          <li class="address-item">
-            <a class="link" href="mailto:willie.jennings@example.com"
-              ><svg class="adress-icon" width="24" height="24">
-                <use href="./img/sprite.svg#icon-email"></use>
-              </svg>
-              willie.jennings@example.com</a
-            >
+          <li class="foot-item">
+            <a class="menu-link link" href="">Store</a>
+          </li>
+          <li class="foot-item">
+            <a class="menu-link link" href="">Recipes</a>
+          </li>
+          <li class="foot-item">
+            <a class="menu-link link" href="">Gallery</a>
           </li>
         </ul>
-      </address>
-      <ul class="foot-social-list list">
-        <li class="social-item">
-          <a class="social-link link" href="">
-            <svg class="social-icon" width="24" height="24">
-              <use href="./img/sprite.svg#icon-tumblr"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link link" href="">
-            <svg class="social-icon" width="24" height="24">
-              <use href="./img/sprite.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link link" href="">
-            <svg class="social-icon" width="24" height="24">
-              <use href="./img/sprite.svg#icon-youtube"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link link" href="">
-            <svg class="social-icon" width="24" height="24">
-              <use href="./img/sprite.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      </div>
+      <div class="adress-box">
+        <address class="contacts-address">
+          <ul class="adress-list list">
+            <li class="address-item">
+              <a class="link" href="https://goo.gl/maps/pRxkrZQEtzReCntT8"
+                ><svg class="adress-icon" width="24" height="24">
+                  <use href="./img/sprite.svg#icon-location"></use>
+                </svg>
+                Elvia Elviaveien 1, 1234 Oslo</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="link" href="mailto:willie.jennings@example.com"
+                ><svg class="adress-icon" width="24" height="24">
+                  <use href="./img/sprite.svg#icon-email"></use>
+                </svg>
+                willie.jennings@example.com</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="social-box">
+        <ul class="foot-social-list list">
+          <li class="foot-social-item">
+            <a class="social-link link" href="">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./img/sprite.svg#icon-tumblr"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="foot-social-item">
+            <a class="social-link link" href="">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="foot-social-item">
+            <a class="social-link link" href="">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./img/sprite.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="foot-social-item">
+            <a class="social-link link" href="">
+              <svg class="social-icon" width="24" height="24">
+                <use href="../img/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <p>
+
+    <p class="footer-text">
       By using this website, you agree to the
       <a href="">Terms of Service</a> and
       <a href="">Privacy Policy</a>
