--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -77,7 +77,7 @@
           <li class="foot-social-item">
             <a class="social-link link" href="">
               <svg class="social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-twitter"></use>
+                <use href="./img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
