--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -33,11 +33,23 @@
   <div class="container">
     <ul class="second-container list">
       <li class="">
-        <img src="./img/imgsect2.1.png" alt="cook together" />
+        <video
+        src="https://www.youtube.com/watch?v=1y28NG88D5g&t=52s&ab_channel=MinimalistBaker"
+        poster="./img/imgsect2.1.png"
+        width="640"
+        controls
+        preload="metadata"
+      ></video>        
         <h2 class="heading-section-two">Bell pepper pasta</h2>
       </li>
       <li class="">
-        <img src="./img/imgsect2.2.png" alt="Cooking" />
+        <video
+        src="https://www.youtube.com/watch?v=vT0E8clCqcg&ab_channel=FoodFusion"
+        poster="./img/imgsect2.2.png"
+        width="640"
+        controls
+        preload="metadata"
+      ></video>  
         <h2 class="heading-section-two">Tomato paste</h2>
       </li>
     </ul>
